--- a/css/style.css
+++ b/css/style.css
@@ -11987,15 +11987,22 @@ section .counter:before {
     right: 0;
     z-index: 999;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#212125+1,212125+30,bfbfbf+100&1+0,0.94+29,0.83+100 */
-    background: -moz-linear-gradient(left, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);
+    /*background: -moz-linear-gradient(left, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);*/
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);
+    /*background: -webkit-linear-gradient(left, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);*/
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);
+    /*background: linear-gradient(to right, rgba(33, 33, 37, 1) 0%, rgba(33, 33, 37, 1) 1%, rgba(33, 33, 37, 0.94) 29%, rgba(33, 33, 37, 0.94) 30%, rgba(191, 191, 191, 0.83) 100%);*/
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#212125', endColorstr='#d4bfbfbf', GradientType=1);
+    /*filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#212125', endColorstr='#d4bfbfbf', GradientType=1);*/
     /* IE6-9 */
     /*background: #212125;*/
+    
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9b9b9b+0,212125+51,212125+51&0.83+5,1+100 */
+    background: -moz-linear-gradient(left,  rgba(155,155,155,0.83) 0%, rgba(143,143,143,0.83) 5%, rgba(33,33,37,0.91) 51%, rgba(33,33,37,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  rgba(155,155,155,0.83) 0%,rgba(143,143,143,0.83) 5%,rgba(33,33,37,0.91) 51%,rgba(33,33,37,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  rgba(155,155,155,0.83) 0%,rgba(143,143,143,0.83) 5%,rgba(33,33,37,0.91) 51%,rgba(33,33,37,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d49b9b9b', endColorstr='#212125',GradientType=1 ); /* IE6-9 */
+
 }
 
 .rd-navbar-static.rd-navbar--is-stuck .rd-navbar-collapse,
